engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/header.less
// Basic header
.header-main {
    background: #fff;

    // Hide the currency and language switcher
    .top-bar { display: none }

    // Logo
    .logo-main {
        .unitize-padding(10, 10, 10, 10, 16);
    }
    .logo--shop { width: 50% }
}

.logo--supportinfo {
    display: none;
}

// Small Checkout & Registration Header
.is--ctl-checkout.is--minimal-header,
.is--ctl-register.is--minimal-header.is--target-checkout {
    // Header Support Info
    .header-main {
        .logo-main {
            width: 100%;
        }

        .logo--shop {
            width: 50%
        }

        .logo--supportinfo {
            display: none;
        }

        .btn--back-top-shop {
            display: none;
        }
    }

    &.is--act-cart {
        .logo--shop {
            width: 50%;
        }
    }
}

.shop--navigation {
    position: relative;

    .navigation--list {
        .linear-gradient(@lightGradientStart, @lightGradientEnd);
        width: 100%;
    }
    .navigation--entry {
        width: 15%;
        display: block;
        border: 1px solid @borderColor;
        border-right: 0 none;
    }
    .entry--link {
        .unitize-padding(0, 10);
        .unitize(45, 16, line-height);
        display: block;
        text-align: center;
        font-weight: bold;
        color: @primaryTextColor;
        text-decoration: none;
    }

    .main-search--form,
    .cart--display,
    .cart--quantity,
    .cart--amount,
    .search--display,
    .entry--account {
        display: none;
    }

    .entry--cart {
        .primary-gradient();
        border-top: 1px solid darken(@primaryColor, 5%);
        border-bottom: 1px solid darken(@secondaryColor, 10%);
        border-left: 0 none;

        .entry--link {
            color: #fff;
        }
    }
    .entry--spacer {
        .unitize-height(47, 16);
        width: 38%;
        border-left: 0 none;
    }

    .entry--menu-left {
        border-right: 1px solid @borderColor;
        border-left: 0 none;
        width: 32%;
    }

    .entry--search {
        font-weight: bold;

        [class^="icon--"] {
            margin: 0;
        }

        .entry--trigger {
            background: none;
            border: 0 none;
        }

        &.is--active {
            background: #fff;
            border-bottom-color: #fff;

            .main-search--form {
                .unitize(48, 16, top);
                left: 0;
                display: block;
                position: absolute;
            }
        }
    }
}

// Default ajax search form
.main-search--form {
    .unitize-padding(8, 10, 8, 10, 16);
    .box-shadow(0 6px 6px -6px @lightTextColor);
    background: #fff;
    border-bottom: 1px solid @borderColor;
    width: 100%;
    left: 0;
    top: 0;
    position: absolute;

    .icon--search {
        .unitize(22, 16, top);
        .unitize(22, 16, left);
        position: absolute;
    }

    .main-search--field {
        .unitize-padding(10, 10, 10, 38, 16);
        width: 100%;
    }
    .main-search--button { display: none; }

}

// Loading indicator for css animations supported browsers
.has--cssanimations {
    .form--ajax-loader {
        .unitize(20, 16, top);
        .unitize(20, 16, right);
        position: absolute;
        display: none;

        &::before {
            .unitize-width(16);
            .unitize-height(16);
            .border-radius(100%);
            .animation(keyframe--spin 1s linear infinite);

            display: block;
            content: "";
            border: 2px solid #ccc;
            border-top: 2px solid #333;
        }
    }
}

// Loading indicator for non css animations supported browsers
.has--no-cssanimations .form--ajax-loader {
    .unitize(24, 16, top);
    .unitize(20, 16, right);
    .unitize-width(16);
    .unitize-height(16);
    position: absolute;
    display: none;
    background-image: url('../../img/icons/loading-indicator.gif');
}

// Search results modal
.main-search--results {
    .clearfix();
    .unitize(110, 16, top);
    position: absolute;
    width: 100%;
    left: 0;
    background: #fff;
    text-align: left;
    z-index: 100;
}

.results--list {
    .unitize-padding(10, 15);
    .box-shadow(0 2px 3px 1px lighten(@borderColor, 5%));
    border-top: 1px solid @borderColor;
    border-bottom: 1px solid @borderColor;
    background: #fff;

    &::after {
        .rotate(135deg);
        .unitize-width(15);
        .unitize-height(15);
        .unitize(-8, 16, top);
        content: '';
        display: block;
        position: absolute;
        background: #fff;
        left: 48%;
        border: 1px solid @borderColor;
        border-top: 0 none;
        border-right: 0 none;
    }

    .list--entry,
    .entry--all-results {
        .unitize-padding(6, 0);
    }

    .list--entry {
        .unitize(30, 16, line-height);
        border-bottom: 1px solid @borderColor;

        &:last-child {
            border: 0 none;
        }
    }

    .entry--no-results {
        width: 100%;
        text-align: center;
        list-style: none;
        font-weight: normal;
    }

    .is-active, .list--entry:hover {
        background: lighten(@borderColor, 10%);
        color: @primaryColor;

        .name--link { color: @primaryColor; }
    }

    .entry--media { width: 10%; min-width:10% }

    .entry--name { width: 60%; }

    .name--link { color: @primaryTextColor }

    .entry--price,
    .entry--all-results-number {
        width: 30%;
        text-align: right;
        color: @primaryColor;
    }

    .entry--all-results-link,
    .entry--all-results-number {
        display: block;
    }
    .entry--all-results {
        .unitize(10, 16, padding-top);
        font-weight: normal;
    }

    .entry--all-results-link {
        width: 70%;

        .icon--arrow-right {
            .unitize(-1, 16, top);
            .unitize-margin(0, 8, 0, 0);
            position: relative;
        }
    }

    .entry--all-results-number {
        font-weight: normal;
    }
}
/* ... */

